add more video effects

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Kubanoi Wat Chetawan</title>
+    <title>Wat Tham Chetawan - Kruba Noi Yanwichai</title>
 </head>
 <body>
     <div class="container">
         <img src="kubanoi_xl.jpg" alt="Kubanoi">
         <div class="centered-text">
-            <h1>Kubanoi</h1>
+            <h1>Kruba Noi Yanwichai</h1>
             <h2>30-08-2023</h2>
-            <h2>Wat Chetawan</h2>
+            <h2>Wat Tham Chetawan</h2>
         </div>
     </div>
 </body>
