--- a/index2.html
+++ b/index2.html
@@ -24,11 +24,13 @@
   <source src="output.mp4"  type="video/mp4">
 </video>
 
-<img src="banner_tr.png" alt="Wat Tham Chetawan Banner" 
-     class="fixed top-5 left-1/2 transform -translate-x-1/2 w-full max-w-md px-4 z-10 opacity-90" />
+<img src="banner_tr.png" alt="Wat Tham Chetawan Banner"
+  class="fixed top-5 left-1/2 -translate-x-1/2 z-10 opacity-90 pointer-events-none
+         w-full max-w-[420px]" />
 
-<img src="kubanoi_tr.png" alt="Kruba Noi" 
-     class="fixed bottom-0 left-1/2 transform max-w-md -translate-x-1/2 z-10" />
+<img src="kubanoi_tr.png" alt="Kruba Noi"
+  class="fixed bottom-0 left-1/2 -translate-x-1/2 z-10 pointer-events-none
+         w-[60vw] max-w-[420px]  h-auto" />
 
 <script>
   const video = document.getElementById('bg');
