--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 <title>Wat Tham Chetawan - Kruba Noi Yanwichai</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-  html, body { margin:0; padding:0; height:500vh; overflow-x:hidden; }
+  html, body { margin:0; padding:0; height:500vh; overflow-x:hidden; background:#000; }
   video {
     position:fixed; 
     top:50%; left:50%;
@@ -13,7 +13,12 @@
     min-width:100vw; min-height:100vh;
     object-fit:cover; 
     transform: translate(-50%, -50%);
-    z-index:-1; pointer-events:none;
+    z-index:1; pointer-events:none;
+    opacity:0;
+    transition: opacity 0.5s;
+  }
+  video.loaded {
+    opacity:1;
   }
 </style>
 </head>
@@ -25,11 +30,11 @@
 </video>
 
 <img src="banner_tr.png" alt="Wat Tham Chetawan Banner"
-  class="fixed top-5 left-1/2 -translate-x-1/2 z-10 opacity-90 pointer-events-none
+  class="fixed top-5 left-1/2 -translate-x-1/2 z-20 opacity-90 pointer-events-none
          w-full max-w-[420px]" />
 
 <img src="kubanoi_tr.png" alt="Kruba Noi"
-  class="fixed bottom-0 left-1/2 -translate-x-1/2 z-10 pointer-events-none
+  class="fixed bottom-0 left-1/2 -translate-x-1/2 z-20 pointer-events-none
          w-[60vw] max-w-[420px]  h-auto" />
 
 <script>
@@ -41,6 +46,7 @@
   };
 
   const onScroll = () => {
+    if (duration === 0) return; // Non fare nulla se il video non è caricato
     const frac = docH > 0 ? window.scrollY / docH : 0;
     target = duration * Math.min(Math.max(frac, 0), 1);
     if (!ticking) {
@@ -51,17 +57,27 @@
 
   const applyTime = () => {
     ticking = false;
-    // Applica solo se differenza > 1 frame (~0.04s a 24fps)
-    if (Math.abs(video.currentTime - target) > 0.04) {
-      video.currentTime = target;
+    // Applica solo se differenza > 1 frame (~0.04s a 24fps) e il video è pronto
+    if (video.readyState >= 2 && Math.abs(video.currentTime - target) > 0.04) {
+      try {
+        video.currentTime = target;
+      } catch (e) {
+        // Ignora errori su iOS
+      }
     }
   };
 
   video.addEventListener('loadedmetadata', () => {
     duration = video.duration || 0;
     video.pause();
+    video.classList.add('loaded'); // Mostra il video
     updateDocH();
     onScroll(); // inizializza posizione
+  });
+
+  // Fix per iOS: forza il video a rimanere in pausa
+  video.addEventListener('play', () => {
+    video.pause();
   });
 
   // Listener "passive" e ricalcolo su resize
