--- a/index2.html
+++ b/index2.html
@@ -8,12 +8,11 @@
   html, body { margin:0; padding:0; height:500vh; overflow-x:hidden; background:#000; }
   video {
     position:fixed; 
-    top:50%; left:50%;
+    top:0; left:0;
     width:100vw; height:100vh;
     min-width:100vw; min-height:100vh;
     object-fit:cover; 
-    transform: translate(-50%, -50%);
-    z-index:1; pointer-events:none;
+    z-index:10; pointer-events:none;
     opacity:0;
     transition: opacity 0.5s;
   }
@@ -25,7 +24,7 @@
 <body>
 
 <img id="placeholder" src="front.jpeg" alt="Loading" 
-     class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full h-full object-cover z-0" />
+     class="fixed top-0 left-0 w-full h-full object-cover z-5" />
 
 <video id="bg" preload="auto" muted playsinline>
   <source src="output.mp4"  type="video/mp4">
@@ -33,11 +32,11 @@
 </video>
 
 <img src="banner_tr.png" alt="Wat Tham Chetawan Banner"
-  class="fixed top-5 left-1/2 -translate-x-1/2 z-20 opacity-90 pointer-events-none
+  class="fixed top-5 left-1/2 -translate-x-1/2 z-30 opacity-90 pointer-events-none
          w-full max-w-[420px]" />
 
 <img src="kubanoi_tr.png" alt="Kruba Noi"
-  class="fixed bottom-0 left-1/2 -translate-x-1/2 z-20 pointer-events-none
+  class="fixed bottom-0 left-1/2 -translate-x-1/2 z-30 pointer-events-none
          w-[60vw] max-w-[420px]  h-auto" />
 
 <script>
