fix iphone issue

--- a/index2.html
+++ b/index2.html
@@ -26,10 +26,12 @@
 <img id="placeholder" src="front.jpeg" alt="Loading" 
      class="fixed top-0 left-0 w-full h-full object-cover z-5" />
 
-<video id="bg" preload="auto" muted playsinline>
+<video id="bg" preload="auto" muted playsinline muted autoplay loop preload="auto"
+  controlslist="nodownload noplaybackrate" disablepictureinpicture>
   <source src="output.mp4"  type="video/mp4">
   <source src="output.webm" type="video/webm">
 </video>
+
 
 <img src="banner_tr.png" alt="Wat Tham Chetawan Banner"
   class="fixed top-5 left-1/2 -translate-x-1/2 z-30 opacity-90 pointer-events-none
