--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,11 @@
 <img src="banner_tr.png" alt="Wat Tham Chetawan Banner"
   class="fixed top-5 left-1/2 -translate-x-1/2 z-30 opacity-90 pointer-events-none
          w-full max-w-[420px]" />
-
+<div class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-30 text-center text-white">
+  <p class="text-2xl font-bold mb-2">Kruba Noi Yanwichai</p>
+  <p class="text-xl mb-2">30-08-2023</p>
+  <p class="text-xl">Wat Tham Chetawan</p>
+</div>
 <img src="kubanoi_tr.png" alt="Kruba Noi"
   class="fixed bottom-0 left-1/2 -translate-x-1/2 z-30 pointer-events-none
          w-[60vw] max-w-[420px]  h-auto" />
