develop new website

--- a/krubanoi.html
+++ b/krubanoi.html
@@ -36,7 +36,7 @@
         <div class="absolute inset-0 bg-black bg-opacity-50"></div>
         <div class="relative h-full flex items-center justify-center pt-20">
             <div class="text-white text-center px-4">
-                <h1 class="text-6xl md:text-7xl font-bold mb-6">Kruba Noi Yanwichai</h1>
+                <h1 class="text-6xl md:text-7xl font-bold mb-6">Kruba Noi</h1>
                 <p class="text-xl md:text-2xl mb-8">The "Little Saint" of Nan Province</p>
                 <p class="text-lg md:text-xl opacity-90">1989 - 2023 • A life of devotion and spiritual achievement</p>
             </div>
@@ -58,19 +58,13 @@
                 <div class="max-w-6xl mx-auto px-4 py-16">
                     <div class="bg-black/30 backdrop-blur-md p-8 rounded-lg border border-white/20">
                         <p class="text-lg text-white mb-4">
-                            Kruba Noi Yanwichai, affectionately known as the "Little Saint," was a revered Buddhist monk 
-                            whose life exemplified the highest ideals of spiritual dedication and ascetic practice. Born in 
-                            Na Daeng, Na Noi District, Nan Province, he dedicated his life to the pursuit of enlightenment 
-                            and the transformation of Wat Tham Chetawan into a sacred sanctuary.
+                            Kruba Noi Yanwichai—“the Little Saint”—was a revered Thai Buddhist monk whose life embodied rigorous dedication and ascetic practice. 
                         </p>
                         <p class="text-lg text-white mb-4">
-                            His extraordinary three-year retreat in the cave of Tham Chetawan, combined with his rigorous 
-                            ascetic practices and profound spiritual wisdom, earned him deep veneration among Buddhist 
-                            practitioners throughout Thailand and beyond.
+                            He pursued awakening and transformed Wat Tham Chetawan into a sacred sanctuary.
                         </p>
                         <p class="text-lg text-white">
-                            Though his life was brief, spanning only 34 years, his spiritual legacy continues to inspire 
-                            countless devotees who visit the temple he transformed through his devotion.
+                            Though he lived only 34 years, his legacy endures in the temple he shaped and in those it continues to inspire.
                         </p>
                     </div>
                 </div>
@@ -140,7 +134,7 @@
                             <div class="bg-monk-red/30 backdrop-blur-md p-4 rounded-lg border-2 border-monk-red/50">
                                 <h3 class="font-bold text-white">The Great Retreat</h3>
                                 <p class="text-sm text-gray-300">July 12, 2014 - October 15, 2017</p>
-                                <p class="text-sm text-white">Entered a three-year, three-month, three-day solitary retreat in Tham Chetawan cave, practicing extreme asceticism.</p>
+                                <p class="text-sm text-white">Entered a 3y3m3d solitary retreat in Tham Chetawan cave, practicing extreme asceticism.</p>
                             </div>
                         </div>
                     </div>
@@ -177,26 +171,19 @@
                         <div class="bg-black/30 backdrop-blur-md p-8 rounded-lg border border-white/20">
                             <h3 class="text-xl font-bold text-white mb-4">The Practice</h3>
                             <p class="text-white mb-4">
-                                From July 12, 2014, to October 15, 2017, Kruba Noi entered into one of the most remarkable 
-                                retreats in modern Buddhist history. For exactly three years, three months, and three days, 
-                                he remained in solitary meditation within the cave of Tham Chetawan.
+                                Jul 12, 2014–Oct 15, 2017, Kruba Noi undertook a solitary retreat in Tham Chetawan cave—exactly three years, three months, and three days. 
                             </p>
                             <p class="text-white mb-4">
-                                His retreat was characterized by extreme asceticism, consuming only one vegetarian meal per day 
-                                and dedicating himself entirely to intensive Dhamma practice. This extraordinary discipline 
-                                was inspired by his teacher, the renowned Kruba Boonchum Yanasanwaro.
+                                He lived with extreme austerity, eating one vegetarian meal a day and dedicating himself to intensive Dhamma practice, inspired by his teacher Kruba Boonchum Yanasanwaro.
                             </p>
                         </div>
                         <div class="bg-black/30 backdrop-blur-md p-8 rounded-lg border border-white/20">
                             <h3 class="text-xl font-bold text-white mb-4">Spiritual Significance</h3>
                             <p class="text-white mb-4">
-                                The retreat represented the pinnacle of Buddhist ascetic practice, demonstrating extraordinary 
-                                spiritual strength and determination. Such extended periods of solitary practice are rare in 
-                                modern Buddhism and are considered signs of advanced spiritual realization.
+                                This retreat was a rare modern example of rigorous Buddhist asceticism, showing exceptional resolve; such prolonged solitude is often read as a sign of advanced realization.
                             </p>
                             <p class="text-white">
-                                His emergence from the retreat further solidified his reputation as a highly realized practitioner, 
-                                earning him deep veneration and the affectionate title of "Little Saint."
+                                On emerging, Kruba Noi’s standing was further affirmed, deepening veneration and the affectionate epithet Kruba noi “Little Saint.”
                             </p>
                         </div>
                     </div>
@@ -217,10 +204,7 @@
                 <div class="max-w-6xl mx-auto px-4 py-16">
                     <div class="grid md:grid-cols-2 gap-8">
                         <div class="bg-black/30 backdrop-blur-md p-6 rounded-lg border border-white/20">
-                            <h3 class="text-xl font-bold text-white mb-4">On Success & Achievement</h3>
-                            <blockquote class="text-white italic mb-4">
-                                "Judge success by what you have accomplished that you had never accomplished before."
-                            </blockquote>
+                            <h3 class="text-xl font-bold text-white mb-4">On Success & Achievement</h3> 
                             <blockquote class="text-white italic">
                                 "Any victory obtained easily, how could it be proud, memorable and worthy of being remembered?"
                             </blockquote>
@@ -231,9 +215,6 @@
                             <blockquote class="text-white italic mb-4">
                                 "Light a candle rather than curse the darkness."
                             </blockquote>
-                            <blockquote class="text-white italic">
-                                "Learn from mistakes, be wise from disappointment."
-                            </blockquote>
                         </div>
                         
                         <div class="bg-black/30 backdrop-blur-md p-6 rounded-lg border border-white/20">
@@ -241,18 +222,12 @@
                             <blockquote class="text-white italic mb-4">
                                 "We can all live without religion, but none of us can live without love and compassion for our fellow beings."
                             </blockquote>
-                            <blockquote class="text-white italic">
-                                "The first person to benefit from forgiveness is ourselves."
-                            </blockquote>
                         </div>
                         
                         <div class="bg-black/30 backdrop-blur-md p-6 rounded-lg border border-white/20">
                             <h3 class="text-xl font-bold text-white mb-4">On Self-Discipline</h3>
                             <blockquote class="text-white italic mb-4">
                                 "Conquer your heart, conquer the whole world."
-                            </blockquote>
-                            <blockquote class="text-white italic">
-                                "Desire what you are entitled to, but do not desire what you want."
                             </blockquote>
                         </div>
                     </div>
@@ -276,25 +251,17 @@
                         <div class="bg-black/30 backdrop-blur-md p-8 rounded-lg border border-white/20">
                             <h3 class="text-xl font-bold text-white mb-4">Conscious Departure</h3>
                             <p class="text-white mb-4">
-                                On August 30, 2023, Kruba Noi called his relatives to give final instructions, 
-                                demonstrating the Buddhist ideal of conscious death. He had predicted the day of his 
-                                passing and provided specific guidance for his funeral rites.
-                            </p>
-                            <p class="text-white">
-                                His instruction was simple yet profound: "Die on which day, cremate on that day" - 
-                                a final teaching on non-attachment and the impermanence of all things.
+                                On August 30, 2023, Kruba Noi summoned his relatives, foretold his death,
+                                and left one directive: “Die on which day,
+                                cremate on that day”—a final lesson in non-attachment and impermanence.
                             </p>
                         </div>
                         <div class="bg-black/30 backdrop-blur-md p-8 rounded-lg border border-white/20">
                             <h3 class="text-xl font-bold text-white mb-4">Testament of Non-Attachment</h3>
                             <p class="text-white mb-4">
-                                His final will prohibited any washing of his body, changing of clothes, autopsy, 
-                                or elaborate funeral decorations. He also forbade the use of his image for profit 
-                                or the solicitation of donations in his name.
-                            </p>
-                            <p class="text-white">
-                                These instructions reflected his lifelong commitment to simplicity, humility, and 
-                                freedom from material attachments - a final lesson in the Buddhist path.
+                                His will barred washing or redressing the body, any autopsy, and ornate rites;
+                                it also forbade fundraising and commercial use of his image—a final lesson
+                                in simplicity, humility, and non-attachment.
                             </p>
                         </div>
                     </div>
