--- a/wat.html
+++ b/wat.html
@@ -59,18 +59,8 @@
                     <div class="grid md:grid-cols-2 gap-12 items-center">
                         <div class="bg-black/30 backdrop-blur-md p-8 rounded-lg border border-white/20">
                             <p class="text-lg text-white mb-4">
-                                Wat Tham Chetawan is a remarkable Buddhist temple located in Na Noi District, Nan Province, Thailand. 
-                                Once a neglected and overgrown site, this sacred place has been transformed into one of the most 
-                                important Buddhist sites in the region.
-                            </p>
-                            <p class="text-lg text-white mb-4">
-                                The temple is deeply connected to the legacy of Kruba Noi Yanwichai, the revered monk known as 
-                                the "Little Saint" who dedicated his life to spiritual practice and transformed this sacred space 
-                                through his devotion and ascetic practices.
-                            </p>
-                            <p class="text-lg text-white">
-                                The temple features a unique fusion of Lanna (Northern Thai) and Burmese architectural styles, 
-                                reflecting the deep spiritual and cultural connections of the region.
+                                Wat Tham Chetawan, in Na Noi District (Nan, Thailand), rose from neglect to a leading Buddhist sanctuary through the devotion of Kruba Noi.
+                                Its architecture blends Lanna and Burmese traditions.
                             </p>
                         </div>
                         <div class="bg-black/30 backdrop-blur-md p-8 rounded-lg border border-white/20">
