mobile optimization and icons

--- a/krubanoi.html
+++ b/krubanoi.html
@@ -83,10 +83,10 @@
         <div class="max-w-6xl mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-3">
                 <img src="img/logo_small.png" alt="Wat Chetawan Logo" class="h-8 w-8">
-                <a href="wat.html" class="text-2xl font-bold hover:text-gray-300 transition-colors">Wat Chetawan</a>
+                <a href="index.html" class="text-2xl font-bold hover:text-gray-300 transition-colors">Wat Chetawan</a>
             </div>
             <div class="space-x-8">
-                <a href="krubanoi.html" class="hover:text-gray-300 transition-colors font-semibold px-3 py-2 rounded-lg hover:bg-white/10">KrubaNoi</a>
+                <a href="krubanoi.html" class="hover:text-gray-300 transition-colors px-3 py-2 rounded-lg hover:bg-white/10">KrubaNoi</a>
             </div>
         </div>
     </nav>
